--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <body>
         <form>
             <div class="name">
-                <input type="text" id="name"></input>
+                <input type="text" id="name">
                 <label for="name">Nome Completo (sem abreviações)</label>
             </div>
             <div class="cpf">
-                <input type="text" id="cpf"></input>
+                <input type="text" id="cpf">
                 <label for="cpf">CPF</label>
             </div>
             <div class="telefone">
-                <input type="text" id="telefone"></input>
+                <input type="text" id="telefone">
                 <label for="telefone">Telefone</label>
             </div>
             <div class="email">
-                <input type="text" id="email"></input>
+                <input type="text" id="email">
                 <label for="email">Email</label>
             </div>
 
