--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 
         <script src="index.js"></script>
         <script src="models/user.js"></script>
+        <script src="utils/db.js"></script>
+        <script src="controllers/setEventListeners.js"></script>
     </body>
 </html>
