Gives a name to the form.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <form>
+        <form name="user-register">
             <div class="name">
                 <input type="text" id="name">
                 <label for="name">Nome Completo (sem abreviações)</label>
