Change name file on index.html.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <script src="index.js"></script>
         <script src="models/user.js"></script>
         <script src="utils/db.js"></script>
-        <script src="controllers/setEventListeners.js"></script>
+        <script src="controllers/register.js"></script>
     </body>
 </html>
