--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="js/templates/footerEditProfile.js"></script>
         <script src="js/utils/db.js"></script>
         <script src="js/utils/utils.js"></script>
+        <script src="js/templates/errors/validationError.js"></script>
         <script src="init.js"></script>
     </body>
 </html>
