--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/templates/userList.js"></script>
         <script src="js/templates/footerRegister.js"></script>
         <script src="js/templates/footerEditProfile.js"></script>
+        <script src="js/templates/404.js"></script>
         <script src="js/utils/db.js"></script>
         <script src="js/utils/utils.js"></script>
         <script src="js/templates/errors/validationError.js"></script>
