--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/templates/footerRegister.js"></script>
         <script src="js/templates/footerEditProfile.js"></script>
         <script src="js/templates/404.js"></script>
+        <script src="js/templates/modals/topModal.js"></script>
         <script src="js/utils/db.js"></script>
         <script src="js/utils/utils.js"></script>
         <script src="js/templates/errors/validationError.js"></script>
