Remove files and add just bundle.js.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,6 @@
     </head>
     <body>
         <div id="container"></div>
-        <script src="js/models/user.js"></script>
-        <script src="js/controllers/usersList.js"></script>
-        <script src="js/controllers/registerUser.js"></script>
-        <script src="js/controllers/editProfile.js"></script>
-        <script src="js/templates/registerForm.js"></script>
-        <script src="js/templates/userList.js"></script>
-        <script src="js/templates/footerRegister.js"></script>
-        <script src="js/templates/footerEditProfile.js"></script>
-        <script src="js/templates/404.js"></script>
-        <script src="js/templates/modals/topModal.js"></script>
-        <script src="js/templates/spinner.js"></script>
-        <script src="js/utils/db.js"></script>
-        <script src="js/utils/utils.js"></script>
-        <script src="js/templates/errors/validationError.js"></script>
-        <script src="init.js"></script>
+        <script src="dist/bundle.js"></script>
     </body>
 </html>
