--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Easy Invest</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <div id="container"></div>
-        <script src="dist/bundle.js"></script>
+        <script src="bundle.js"></script>
     </body>
 </html>
